# dfa-experiments

./: .gitignore  README.md  dfa_net.py  pyproject.toml  visualizations.ipynb
configs/: example_config.yaml
